# opengl-engine

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/fs/: object.cpp  object.h
src/gl/: Mesh.cpp  Mesh.h  Program.cpp  Program.h  Transform.cpp  Transform.h
src/glfw/: Window.cpp  Window.h
src/shaders/: basic.frag  basic.vert  basic.vertex
src/util/: Mat4.cpp  Mat4.h  Timer.cpp  Timer.h  Vec4.cpp  Vec4.h  shader.cpp  shader.h  strutil.cpp  strutil.h
